--- a/aboutus.css
+++ b/aboutus.css
@@ -58,7 +58,7 @@
   margin-left: 50px;
   margin-right: 50px;
   text-align: justify;
-  width: 1300px;
+  width: 1000vh;
   height: 450px;
   color: #5e1662;
   padding-top: 50px;
