--- a/aboutus.css
+++ b/aboutus.css
@@ -58,7 +58,7 @@
   margin-left: 50px;
   margin-right: 50px;
   text-align: justify;
-  width: 1100vh;
+  width: 100%;
   height: 450px;
   color: #5e1662;
   padding-top: 50px;
@@ -66,7 +66,7 @@
 }
 .statement p{
   text-align: justify;
-  width: 100%;
+  width: 900px;
 }
 .about{
   background-color: aliceblue;
