--- a/cart.css
+++ b/cart.css
@@ -67,7 +67,7 @@
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(207, 6, 6);
-    width: 100%;
+    width: auto;
 }
 .row {
     display: flex;
